@@ -15,6 +15,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
+#include <sysdeps.h>
 #include <errno.h>
 #include "backend.h"
 
@@ -22,13 +23,44 @@ static int error_code(obuf* out)
 {
   return (out->io.errnum == EPIPE
 	  || out->io.errnum == ECONNRESET)
-    ? 1
+    ? 2
     : -1;
+}
+
+/* Return value:
+ * 0 if the iobuf was ready
+ * 1 for timeout
+ * 2 for an interrupt
+ */
+static int pollit(iobuf* io, int events)
+{
+  iopoll_fd pfd[2];
+
+  pfd[0].fd = 0;
+  pfd[0].events = IOPOLL_READ;
+  pfd[0].revents = 0;
+  pfd[1].fd = io->fd;
+  pfd[1].events = events;
+  pfd[1].revents = 0;
+
+  switch (iopoll_restart(pfd, 2, io->timeout)) {
+  case -1:
+    IOBUF_SET_ERROR(io);
+    return -1;
+  case 0:
+    return 1;
+  default:
+    if (pfd[0].revents)
+      return 2;
+    return 0;
+  }
 }
 
 /* Return value:
  * -1 for a system error
  * 0 for a successful transfer
+ * 1 for timeout
+ * 2 for interrupted transfer
  */
 static int copy_xlate(ibuf* in, obuf* out,
 		      unsigned long (*xlate)(char* out,
@@ -41,12 +73,15 @@ static int copy_xlate(ibuf* in, obuf* out,
   char out_buf[sizeof in_buf * 2];
   char* optr;
   unsigned long ocount;
+  int result;
 
   if (ibuf_error(in) || ibuf_error(out))
     return -1;
   *bytes_in = 0;
   *bytes_out = 0;
   for (;;) {
+    if ((result = pollit(&in->io, IOPOLL_READ)) != 0)
+      return result;
     if (!ibuf_read(in, in_buf, sizeof in_buf) && in->count == 0) {
       if (ibuf_eof(in))
 	break;
@@ -61,6 +96,8 @@ static int copy_xlate(ibuf* in, obuf* out,
       optr = in_buf;
       ocount = in->count;
     }
+    if ((result = pollit(&out->io, IOPOLL_WRITE)) != 0)
+      return result;
     if (!obuf_write(out, optr, ocount))
       return error_code(out);
     *bytes_out += ocount;
