@@ -9,7 +9,8 @@ TCPLOCALHOST=localhost
 TCPREMOTEIP=127.0.0.1
 LOGREQUESTS=1
 CVM_RANDOM_BYTES=0
-export CVM_RANDOM_BYTES LOGREQUESTS TCPLOCALIP TCPLOCALHOST TCPREMOTEIP
+TIMEOUT=5
+export CVM_RANDOM_BYTES LOGREQUESTS TCPLOCALIP TCPLOCALHOST TCPREMOTEIP TIMEOUT
 
 env="env UID=$uid GID=$gid USER=ftp GROUP=ftp HOME=$home TZ=Canada/Saskatchewan"
 
