@@ -1,18 +1,44 @@
 <requires home>
 <loop mode pasv port>
+<loop method close abort drop>
 for i in $( seq 10000 ); do
   echo 012345678901234567890123456789012345678901234567890123456789012
 done >$home/testfile
-xfertest xfer $mode retr bin 64 'RETR testfile' | fixbytes
+xfertest xfer $mode retr bin 64:$method 'RETR testfile' | fixbytes
 rm $home/testfile
 <!----------------------------------------------------------------------------->
-<result pasv>
+<result pasv close>
 200 Transfer mode changed to BINARY.^M
 227 Entering Passive Mode (#,#,#,#,#,#).^M
 150 Opened data connection.^M
 012345678901234567890123456789012345678901234567890123456789012
 426 File send interrupted (### bytes sent).^M
-<result port>
+<result pasv abort>
+200 Transfer mode changed to BINARY.^M
+227 Entering Passive Mode (#,#,#,#,#,#).^M
+150 Opened data connection.^M
+012345678901234567890123456789012345678901234567890123456789012
+426 File send interrupted (### bytes sent).^M
+<result pasv drop>
+200 Transfer mode changed to BINARY.^M
+227 Entering Passive Mode (#,#,#,#,#,#).^M
+150 Opened data connection.^M
+012345678901234567890123456789012345678901234567890123456789012
+426 File send interrupted (### bytes sent).^M
+<!----------------------------------------------------------------------------->
+<result port close>
+200 Transfer mode changed to BINARY.^M
+200 OK.^M
+150 Opened data connection.^M
+012345678901234567890123456789012345678901234567890123456789012
+426 File send interrupted (### bytes sent).^M
+<result port abort>
+200 Transfer mode changed to BINARY.^M
+200 OK.^M
+150 Opened data connection.^M
+012345678901234567890123456789012345678901234567890123456789012
+426 File send interrupted (### bytes sent).^M
+<result port drop>
 200 Transfer mode changed to BINARY.^M
 200 OK.^M
 150 Opened data connection.^M
